# spring_mass_control_demo

./: .gitignore  CMakeLists.txt  README.md  controller_test.sh  plant_model.py  plant_unit.sh  plot_velocity.py  plot_velocity_profile.py  run_tests.sh
MIL/: MIL_L1.cpp  MIL_L1_visualization.py  MIL_L2.cpp  MIL_L2_visualization.py  MIL_L3.cpp  MIL_L3_visualization.py
PlantModel/: PlantModel.cpp  PlantModel.hpp
gui/: simple_cli.py  simulation_cli.py  simulation_gui.py
plant_model/: plant_model.cpp  plant_model.hpp
prototype_py/: controller.py  plant_model.py  test_harness.py
python_bindings/: bindings.cpp
src/: SpringMassControlDemo.cpp  SpringMassControlDemo.hpp  main.cpp
src/control/: controller.cpp  controller.hpp
src/plant_model/: PlantModel.cpp  PlantModel.h  plant_model.cpp  plant_model.hpp
tests/: PlantModelTests.cpp  PlantModel_test.cpp  PlantModel_test_vis.py  controller_unit.cpp  getters_setters_unit.cpp  plant_model_test.cpp  plant_model_test_vis.py  plant_model_unit_vis.py  plot_distance_velocity_over_time.py  plot_velocity.py  plot_velocity_controller.py  test_manual_stop.cpp  test_velocity_controller.cpp  test_velocity_profile.cpp
utils/: save_to_csv.hpp
